# template-matching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  templatematching.cpp  templatematchingopencv.cpp  templatematchingopencv.h  templatematchingui.cpp
python/: form.py  templatematchingopencv.py  templatematchingui.py
src/: CMakeLists.txt  main.cpp  templatematching.cpp  templatematching.h  templatematchingopencv.cpp  templatematchingopencv.h  templatematchingui.cpp  templatematchingui.h  ui_templatematchingui.h
ui/: templatematchingui.ui
